# duckdb_onelake

./: .gitignore  .gitmodules  CMakeLists.txt  DOCUMENTATION.md  Makefile  PARTITION_IMPLEMENTATION.md  PARTITION_SYNTAX.md  README.md  WRITE_OPERATIONS_ROADMAP.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: WRITE_API.md
rust/onelake_delta_writer/: Cargo.toml  build.rs  cbindgen.toml
rust/onelake_delta_writer/src/: lib.rs
src/: onelake_api.cpp  onelake_catalog.cpp  onelake_create_table_parser.cpp  onelake_credentials.cpp  onelake_delta_writer.cpp  onelake_extension.cpp  onelake_parser_extension.cpp  onelake_secret.cpp
src/include/: onelake_api.hpp  onelake_credentials.hpp  onelake_delta_writer.hpp  onelake_delta_writer_c_api.hpp  onelake_extension.hpp  onelake_logging.hpp  onelake_parser_extension.hpp  onelake_secret.hpp  onelake_types.hpp
src/include/storage/: onelake_catalog.hpp  onelake_catalog_set.hpp  onelake_delete.hpp  onelake_http_util.hpp  onelake_insert.hpp  onelake_path_util.hpp  onelake_schema_entry.hpp  onelake_schema_set.hpp  onelake_storage_extension.hpp  onelake_table_entry.hpp  onelake_table_set.hpp  onelake_transaction.hpp  onelake_transaction_manager.hpp  onelake_update.hpp
src/storage/: onelake_catalog_set.cpp  onelake_delete.cpp  onelake_http_util.cpp  onelake_insert.cpp  onelake_path_util.cpp  onelake_schema_entry.cpp  onelake_schema_set.cpp  onelake_storage_extension.cpp  onelake_table_entry.cpp  onelake_table_set.cpp  onelake_transaction.cpp  onelake_transaction_manager.cpp  onelake_update.cpp
test/sql/: onelake.test  onelake_create_table.test  onelake_delete.test  onelake_drop_table.test  onelake_update.test  onelake_update_explain.test  onelake_write_modes.test  onelake_writes.test
vcpkg_overlays/azure-core-cpp/: mingw-disable-sio.patch  portfile.cmake  vcpkg.json
