[package]
name = "onelake_delta_writer"
version = "0.1.0"
edition = "2021"
authors = ["DuckDB OneLake Team"]
description = "FFI-compatible Delta Lake writer used by the DuckDB OneLake extension"
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
name = "onelake_delta_writer"
crate-type = ["staticlib", "rlib"]

[dependencies]
deltalake = { version = "0.19", default-features = false, features = ["azure", "datafusion"] }
arrow = { version = "52.2", default-features = false, features = ["ffi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
cbindgen = "0.27"
